--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .hdr-wpr{
-  background-color: #3B5249;
+  background-color: #519872;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -9,12 +9,12 @@
 }
 
 .hdr-logo{
-  margin-left: 300px;
+  margin-left: 385px;
 }
 
 .hdr-bold-txt{
   font-weight: 700; 
-  font-size: 2.1em;
+  font-size: 1.8em;
   margin-left: 10px;
   margin-top: 0px;
 
@@ -22,15 +22,18 @@
 
 .hdr-txt{
   font-weight: 200; 
-  font-size: 2.0em;
+  font-size: 1.8em;
   margin-left: 10px;
 }
 
 .hdr-logout{
- margin-left: 400px;
- font-size: 1.2em;
+  margin-left: 420px;
+  font-size: 0.9em;
+  font-weight: bold;
 }
 
 a {text-decoration: none;}
 
 a:visited{color: white;}
+
+a:hover{color:#3B5249;}
