--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -4,7 +4,7 @@
 }
 
 .dash-content{
-  background-color: white;
+  background: linear-gradient(to bottom, #e2f3ea, #ffffff);
   height: 93vh;
   width: 50%;
   margin-left: auto;
