--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -5,8 +5,8 @@
 
 .dash-content{
   background: linear-gradient(to bottom, #e2f3ea, #ffffff);
-  height: 93vh;
-  width: 50%;
+  height: 100%;
+  width: 55%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -85,9 +85,60 @@
   width: 95%;
 }
 
-.dash-listing{
+.dash-listing-wpr{
   text-align: left;
-  margin: 20px;
   font-size: 1.2em;
   font-weight: bold;
+  padding: 10px;
+}
+.dash-listing{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  background-color: #DEDEDE;
+  text-align: left;
+  margin: 20px;
+  font-size: 0.9em;
+  font-weight: 100;
+}
+
+.dash-listing-img{
+  height: 150px;
+  width: 150px;
+}
+
+.dash-listing-column2{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  width: 360px;
+  padding: 0px 10px;
+}
+
+.vl{
+  border-left: 1px solid;
+  height: 19vh;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 8px;
+}
+
+.dash-listing-column3{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  font-weight: bold;
+  margin-top: 25px;
+}
+
+.dash-listing-name{
+  font-weight: bold;
+  margin-bottom: 8px;
+  margin-top: 10px;
+}
+
+.dash-listing-delX{
+  position: absolute;
+  right: 370px;
+  margin-top: 5px;
 }
