--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -11,10 +11,6 @@
   margin-right: auto;
 }
 
-.dash-UI{
-  
-}
-
 .dash-addProp-btn{
   text-align: center;
   background-color: #8AEA92;
@@ -105,6 +101,8 @@
 .dash-listing-img{
   height: 150px;
   width: 150px;
+  background: transparent no-repeat center;
+  background-size: cover;
 }
 
 .dash-listing-column2{
