--- a/src/components/Steps/Step1.css
+++ b/src/components/Steps/Step1.css
@@ -16,7 +16,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
-  width: 735px;
+  width: 815px;
   align-items: center;
   margin-left: 20px;
   font-size: 1.3em;
@@ -51,7 +51,7 @@
 
 .step1-input-wpr{
   text-align: left;
-  width: 530px;
+  width: 600px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -66,14 +66,15 @@
 }
 
 .step1-input-name{
-  width: 550px;
+  width: 600px;
   height: 20px;
   border: 1px solid #AFD4C0;
   border-radius: 2px;
+  padding: 2px 10px;
 }
 
 .step1-input-description{
-  width: 530px;
+  width: 580px;
   height: 100px;
   border: 1px solid #AFD4C0;
   border-radius: 2px;
