--- a/src/components/Steps/Step2.css
+++ b/src/components/Steps/Step2.css
@@ -11,7 +11,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
-  width: 735px;
+  width: 815px;
   align-items: center;
   margin-left: 20px;
   font-size: 1.3em;
@@ -46,7 +46,7 @@
 
 .step2-input-wpr{
   text-align: left;
-  width: 530px;
+  width: 600px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -59,11 +59,28 @@
   font-weight: bold;
 }
 
+.step2-input-city-title{
+  margin-top: 30px;
+  margin-bottom: 7px;
+  margin-left: 10px;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.step2-input-state-title{
+  margin-top: 30px;
+  margin-bottom: 7px;
+  margin-left: 110px;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
 .step2-input-address{
-  width: 550px;
+  width: 580px;
   height: 20px;
   border: 1px solid #AFD4C0;
   border-radius: 2px;
+  padding: 2px 10px;
 }
 
 .step2-input-subWpr{
@@ -73,28 +90,31 @@
 }
 
 .step2-input-city{
-  width: 200px;
+  width: 250px;
   height: 20px;
   border: 1px solid #AFD4C0;
   border-radius: 2px;
   margin-top: 64px;
   margin-left: -46px;
+  padding: 2px 10px;
 }
 
 .step2-input-state{
-  width: 200px;
+  width: 250px;
   height: 20px;
   border: 1px solid #AFD4C0;
   border-radius: 2px;
   margin-top: 64px;
-  margin-left: 70px;
+  margin-left: -60px;
+  padding: 2px 10px;
 }
 
 .step2-input-zip{
-  width: 200px;
+  width: 230px;
   height: 20px;
   border: 1px solid #AFD4C0;
   border-radius: 2px;
+  padding: 2px 10px;
 }
 
 .step2-btn-wpr{
@@ -111,13 +131,15 @@
   width: 120px;
   height: 35px;
   border: none;
-  margin-left: 158px;
+  margin-left: 125px;
   margin-top: 50px;
   font-size: 0.8em;
   border-radius: 3px;
   opacity: 1;
   outline: 0;
 }
+
+.step2-btn-prev:hover {opacity:0.7;}
 
 .step2-btn-next{
   background-color: #3B5249;
@@ -125,7 +147,7 @@
   width: 120px;
   height: 35px;
   border: none;
-  margin-right: 133px;
+  margin-right: 120px;
   margin-top: 50px;
   font-size: 0.8em;
   border-radius: 3px;
@@ -133,3 +155,4 @@
   outline: 0;
 }
 
+.step2-btn-next:hover {opacity:0.7;}
