--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -23,8 +23,9 @@
   flex-direction: column;
   flex-wrap: nowrap;
   text-align: left;
-  margin-left: 175px;
   font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .login-input-title{
