--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -5,7 +5,7 @@
 
 .dash-content{
   background: linear-gradient(to bottom, #e2f3ea, #ffffff);
-  height: 100%;
+  min-height: 94vh;
   width: 55%;
   margin-left: auto;
   margin-right: auto;
